fix: organization dropdown alignment

--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -79,14 +79,3 @@
     color: $black;
   }
 }
-
-.dropdown-group-wrapper {
-  position: relative;
-  z-index: $zindex-dropdown;
-  margin-left: auto;
-
-  .dropdown-container {
-    position: absolute;
-    width: 100%;
-  }
-}
