--- a/src/studio-home/scss/StudioHome.scss
+++ b/src/studio-home/scss/StudioHome.scss
@@ -18,7 +18,7 @@
   }
 
   .organization-section-form {
-    margin: $spacer 0;
+    margin: $spacer 0 -8px;
 
     .organization-section-form-label {
       color: $gray-700;
